src/test/ui/span/regions-escape-loop-via-variable.nll.stderr
error[E0597]: `x` does not live long enough
  --> $DIR/regions-escape-loop-via-variable.rs:21:13
   |
LL |         let x = 1 + *p;
   |                     -- borrow later used here
LL |         p = &x;
   |             ^^ borrowed value does not live long enough
LL |     }
   |     - borrowed value only lives until here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
